--- a/ace.html
+++ b/ace.html
@@ -28,7 +28,7 @@ This tool must be executed in an active GRASS GIS session
 and will use the current location to access the actinia service. The current location can
 be overwritten
 -->
-specified by the <b>location<b> option. All commands will be executed
+specified by the <b>location</b> option. All commands will be executed
 per default in an ephemeral database, hence generated output must be
 exported using augmented GRASS commands. The flag <b>-p</b> allows the
 execution of commands in the persistent user database. It should be used
@@ -137,6 +137,7 @@ List all locations the user has access to:
 
 <div class="code"><pre>
 ace -l
+</pre></div>
 
 <p>
 List all mapsets in the specified location the user access to:
@@ -212,5 +213,7 @@ Original source: https://github.com/mundialis/actinia_core/blob/master/scripts/a
 
 <p>
 GRASS GIS parser support: Markus Neteler, <a href="https://www.mundialis.de">mundialis</a>
+<!--
 <p>
 <i>Last changed: $Date$</i>
+-->
