--- a/ace.html
+++ b/ace.html
@@ -201,7 +201,7 @@ Run command <em>g.list</em> in the persistent user database in location "nc_spm_
 mapset test_mapset:
 
 <div class="code"><pre>
-ace location="nc_spm_08 -p mapset="test_mapset" grass_commmand="g.list type=raster mapset=test_mapset"
+ace location="nc_spm_08" -p mapset="test_mapset" grass_command="g.list type=raster mapset=test_mapset"
 </pre></div>
 
 
