fix create + delete mapset in html

--- a/ace.html
+++ b/ace.html
@@ -185,7 +185,7 @@ ace delete-location="test_location"
 Create a new mapset in location "nc_spm_08" in the persistent user database:
 
 <div class="code"><pre>
-ace location="nc_spm_08" create-mapset="test_mapset"
+ace location="nc_spm_08" create_mapset="test_mapset"
 </pre></div>
 
 <p>
@@ -193,7 +193,7 @@ Delete test_mapset mapset from location "nc_spm_08" in the persistent user
 database:
 
 <div class="code"><pre>
-ace location="nc_spm_08" delete-mapset="test_mapset"
+ace location="nc_spm_08" delete_mapset="test_mapset"
 </pre></div>
 
 <p>
