--- a/ace.html
+++ b/ace.html
@@ -42,6 +42,7 @@ actinia server and credentials (example):
 export ACTINIA_USER='demouser'
 export ACTINIA_PASSWORD='gu3st!pa55w0rd'
 export ACTINIA_URL='https://actinia.mundialis.de'
+export ACTINIA_VERSION='v2'
 </pre></div>
 
 <p>
