clean old SVN Date comment

--- a/ace.html
+++ b/ace.html
@@ -206,15 +206,10 @@ ace location="nc_spm_08" mapset="test_mapset" grass_command="g.list type=raster 
 </pre></div>
 
 
-<h2>AUTHOR</h2>
+<h2>AUTHORS</h2>
 
 Soeren Gebbert
-
+<p>
 Original source: https://github.com/mundialis/actinia_core/blob/master/scripts/ace
-
 <p>
-GRASS GIS parser support: Markus Neteler, <a href="https://www.mundialis.de">mundialis</a>
-<!--
-<p>
-<i>Last changed: $Date$</i>
--->
+GRASS GIS parser support: Markus Neteler, <a href="https://www.mundialis.de">mundialis</a>, Germany
